# gog-warp

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: auth.rs  builds.rs  dependencies.rs  downloads.rs  get_library.rs  launch_parser.rs
scripts/: generate_languages.py
src/: core.rs  errors.rs  lib.rs  utils.rs
src/auth/: mod.rs  types.rs
src/constants/: domains.rs  mod.rs
src/content_system/: languages.rs  mod.rs  patches.rs  secure_link.rs  tests.rs
src/content_system/dependencies/: mod.rs
src/content_system/downloader/: allocator.rs  diff.rs  mod.rs  patching.rs  progress.rs  utils.rs  verify.rs  worker.rs
src/content_system/types/: mod.rs  traits.rs  v1.rs  v2.rs
src/gameplay/: mod.rs  types.rs
src/user/: mod.rs  types.rs
src/xdelta/: mod.rs
