[package]
name = "gog-warp"
version = "0.1.0"
edition = "2021"
authors = ["Paweł Lidwin <linguin@tutanota.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
reqwest = { version = "0.12.3", features = ["json", "rustls-tls-native-roots"], default-features = false}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.94"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
