[package]
name = "gog-warp"
version = "0.1.0"
edition = "2021"
authors = ["Paweł Lidwin <linguin@tutanota.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.9", features = ["zlib", "tokio"] }
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
derive-getters = "0.3.0"
futures = "0.3.30"
libc = "0.2.153"
log = "0.4.21"
parking_lot = "0.12.1"
reqwest = { version = "0.12.3", features = ["json", "rustls-tls-native-roots", "stream"], default-features = false}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.19"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
url = "2.5.0"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.94"
rand = "0.8.5"

[features]
default = ["downloader"]
downloader = []

[dev-dependencies]
indicatif = "0.17.8"

